[package]
name = "diagonal"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Extract diagonals from a matrix in various directions"
repository = "https://github.com/Antosser/diagonal-rs"
documentation = "https://docs.rs/diagonal"
readme = "README.md"
keywords = ["diagonal", "matrix", "array", "cross-platform", "algorithm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
